--- a/workflows/github_actions.yaml
+++ b/workflows/github_actions.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: '>=18.0.0'
           cache: 'npm'
 
       - name: Cache Cypress binary
